--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
             <version>2.19.0</version>
         </dependency>
         <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swingx</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20210307</version>
